--- a/client/src/app/components/positions-details/positions-details.component.scss
+++ b/client/src/app/components/positions-details/positions-details.component.scss
@@ -591,6 +591,7 @@ $profile-form-field-mt: 30px;
                 &.edu_img {
                   margin-top: 3px;
                   width: 30px;
+                  margin-left: 0
                 }
               }
               font-size: 14px;
@@ -633,9 +634,8 @@ $profile-form-field-mt: 30px;
               li {
                 display: inline-block;
                 position: relative;
-                margin-right: 10px;
                 margin-top: 5px;
-                margin-bottom: 8px;
+                margin-bottom: 0;
 
                 &::after {
                   position: absolute;
