--- a/client/src/styles/variables.scss
+++ b/client/src/styles/variables.scss
@@ -12,6 +12,9 @@ $max-tablet-breakpoint: 1023px;
 $min-mobile-breakpoint: 310px;
 $max-mobile-breakpoint: 767px;
 
+$min-desktop-breakpoint: 1301px;
+$max-desktop-breakpoint: 1430px;
+
 
 
 // Official Colors
@@ -234,6 +237,7 @@ $mat-form-border-color: #dae4f1;
 $mat-form-prefix-color: #525252;
 $header-color:grey;
 $selected-bg-color: #d6e8f7;
+$filter-menu-bg-color: #fff;
 @mixin flex($direction, $align, $justify) {
   display: flex;
   flex-wrap: wrap;
