Position-info page routing issue resolved.

--- a/client/src/app/components/positions-details/positions-details.component.scss
+++ b/client/src/app/components/positions-details/positions-details.component.scss
@@ -1,4 +1,4 @@
-@import "../../../../styles/variables";
+@import "../../../styles/variables.scss";
 $profile-form-field-mt: 30px;
 :host {
   .career-main {
