--- a/client/src/app/pages/application/application-detail/application-references/application-references.component.scss
+++ b/client/src/app/pages/application/application-detail/application-references/application-references.component.scss
@@ -109,6 +109,7 @@
     //application-references
     .application-references {
       width: 99%;
+      padding-top: 10px;
       margin: 0 auto;
       float: none;
       .row {
