--- a/client/src/app/pages/saved-jobs/saved-jobs.component.html
+++ b/client/src/app/pages/saved-jobs/saved-jobs.component.html
@@ -261,7 +261,7 @@
                 </li>
                 <li>
                   <img src="assets/icons/ic_clock.svg">
-                  <span class="image">{{countDays(job.post_date)}} Days ago</span>
+                  <span>{{helperService.convertToDays(job.post_date) }} </span>
                 </li>
               </ul>
             </div>
@@ -343,7 +343,7 @@
                   ellipseTag="true" value="{{mathFloor(6*job.true_fitscore_info?.skills_fitscore)}}">
                 </simple-tag>
                 <simple-tag *ngIf="job.minimum_skills" type="gray" title="Required Skills Match" ellipseTag="true"
-                value="{{mathFloor(6*job.true_fitscore_info?.required_skills_fitscore)}}">
+                  value="{{mathFloor(6*job.true_fitscore_info?.required_skills_fitscore)}}">
                 </simple-tag>
                 <simple-tag *ngIf="job.true_fitscore_info?.experience_weight" type="gray" title="Experience Match"
                   ellipseTag="true" value="{{mathFloor(6*job.true_fitscore_info?.experience_fitscore)}}">
