--- a/client/src/app/pages/application/application-detail/application-position-information/application-position-information.component.scss
+++ b/client/src/app/pages/application/application-detail/application-position-information/application-position-information.component.scss
@@ -80,6 +80,7 @@ $profile-form-field-mt: 30px;
             font-weight: 600;
             color: #001d40;
             opacity: 0.84;
+            line-height: 30px;
           }
 
           & .skills-preferred-m {
